# squads-v3-onchain-index

./: README.md
squads-v3-index/: Cargo.toml
squads-v3-index-cli/: Cargo.toml
squads-v3-index-cli/src/: main.rs
squads-v3-index/src/: lib.rs
