[package]
name = "squads-v3-index-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for linking Solana program multisig authorities back to the Squads V3 program"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
shellexpand = "2.1.2"
solana-sdk = "1.10.32"
solana-client = "1.14.7"
solana-cli-config = "1.14.7"
borsh = "0.9.3"
tokio = { version = "1.8.4", features = ["full"] }
squads-mpl = { version="1.3.1", features=["no-entrypoint", "no-idl", "no-log-ix-name"] }
anchor-lang = "0.26.0"